# MaaAssistantYYS

./: .gitignore  .gitmessage.txt  CMakeLists.txt  README.md
doc/: README.md  architecture.md  development-plan.md  iteration-summary.md  migration-reference.md  requirements.md  resource-spec.md  tech-stack.md  todo.md  verification.md
resource/YYS/: template_index.json
resource/YYS/activity/: config.json
resource/YYS/activity/tower_sample/: config.json
resource/YYS/base/: config.json
resource/YYS/daily/: config.json
resource/YYS/daily/area_boss/: config.json
resource/YYS/daily/awakening/: config.json
resource/YYS/daily/coin_monster/: config.json
scripts/: static_scan.sh
src/MaaCore/: Assistant.cpp  Assistant.h  AsstCaller.cpp
src/MaaCore/Common/: AsstTypes.h
src/MaaCore/Config/: GeneralConfig.cpp  GeneralConfig.h
src/MaaCore/Controller/: AdbController.cpp  AdbController.h  Controller.cpp  Controller.h  MacSCKHelper.mm  MinitouchController.cpp  MinitouchController.h  MumuExtras.cpp  PlayToolsController.cpp  Win32Controller.cpp
src/MaaCore/Task/: BattleHelper.cpp  ProcessTask.cpp  ProcessTask.h
src/MaaCore/Ui/: BattleQuickFormation.cpp  BattleQuickFormation.h
src/MaaCore/Utils/: Algorithm.hpp  Logger.hpp
src/MaaCore/Vision/: VisionHelper.cpp
src/MaaUtils/: .gitignore  MaaUtils.cmake
src/MaaUtils/cmake/: config.cmake
src/MaaUtils/source/: CMakeLists.txt
src/MaaUtils/source/Encoding/: Encoding.cpp
src/MaaUtils/source/GpuOption/: GpuOptionMacOS.cpp  GpuOptionWin32.cpp  GpuOption_NotImpl.cpp
src/MaaUtils/source/IOStream/: ChildPipeIOStream.cpp  IOStream.cpp  SockIOStream.cpp
src/MaaUtils/source/Logger/: Logger.cpp
src/MaaUtils/source/Platform/: PlatformLinux.cpp  PlatformMacOS.cpp  PlatformPosix.cpp  PlatformWin32.cpp
src/MaaUtils/source/Runtime/: Runtime_Posix.cpp  Runtime_Win.cpp
src/MaaUtils/source/Uuid/: Uuid.cpp
src/MaaUtils/tools/: maadeps-extract.py  maadeps_download.py
src/MaaYYS/Activity/: ConfigDrivenActivity.cpp  ConfigDrivenActivity.h  YYSActivityManager.cpp  YYSActivityManager.h  YYSBaseActivity.cpp  YYSBaseActivity.h
src/MaaYYS/Base/: IActionExecutor.h  IOcrResolver.h  ITemplateResolver.h  IYYSActivity.h  IYYSDaily.h  YYSConfig.cpp  YYSConfig.h  YYSContext.cpp  YYSContext.h  YYSModule.cpp  YYSModule.h  YYSTypes.h
src/MaaYYS/Daily/: YYSDailyManager.cpp  YYSDailyManager.h  YYSDailyTask.cpp  YYSDailyTask.h
src/MaaYYS/Tools/: DeviceTest.cpp  ExplorationDryRun.cpp  OrochiDryRun.cpp  ResourceVerifier.cpp  Sprint5DryRun.cpp  TemplateMatchVerify.cpp  TestResourceLoader.cpp  YYSResourceProbe.cpp
test/: UnitTests.cpp
(+151 files in other folders)
